Feature/german language support (#431)
* Update translation.json

Fixed some translation issues for German, made it more user friendly and common.

* Update translation.json

added updated block for serverStats

* Update translation.json

Added translations

* Update translation.json

Removed duplicate of "free":"Free"

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -187,7 +187,7 @@
     "commandsWillBeSent": "Befehle werden an {{count}} ausgewählte Terminals gesendet.",
     "settings": "Einstellungen",
     "enableRightClickCopyPaste": "Rechtsklick-Kopieren\/Einfügen aktivieren",
-    "shareIdeas": "Haben Sie Ideen, was als nächstes für SSH-Tools kommen sollte? Teilen Sie diese mit uns"
+    "shareIdeas": "Haben Sie Vorschläge welche weiteren SSH-Tools ergänzt werden sollen? Dann teilen Sie diese gerne mit uns auf"
   },
   "homepage": {
     "loggedInTitle": "Eingeloggt!",
@@ -355,7 +355,7 @@
     "tabNavigation": "Registerkarte Navigation"
   },
   "admin": {
-    "title": "Administratoreinstellungen",
+    "title": "Admin-Einstellungen",
     "oidc": "OIDC",
     "users": "Benutzer",
     "userManagement": "Benutzerverwaltung",
@@ -390,11 +390,11 @@
     "actions": "Aktionen",
     "external": "Extern",
     "local": "Lokal",
-    "adminManagement": "Verwaltung von Administratoren",
+    "adminManagement": "Admin Verwaltung",
     "makeUserAdmin": "Benutzer zum Administrator machen",
     "adding": "Hinzufügen...",
     "currentAdmins": "Aktuelle Administratoren",
-    "adminBadge": "Administrator",
+    "adminBadge": "Admin",
     "removeAdminButton": "Administrator entfernen",
     "general": "Allgemein",
     "userRegistration": "Benutzerregistrierung",
@@ -416,6 +416,13 @@
     "userDeletedSuccessfully": "Benutzer {{username}} wurde erfolgreich gelöscht",
     "failedToDeleteUser": "Benutzer konnte nicht gelöscht werden",
     "overrideUserInfoUrl": "URL für Benutzerinformationen überschreiben (nicht erforderlich)",
+    "failedToFetchSessions": "Fehler beim Abrufen der Sitzungen",
+    "sessionRevokedSuccessfully": "Sitzung erfolgreich widerrufen",
+    "failedToRevokeSession": "Sitzung konnte nicht widerrufen werden",
+    "confirmRevokeSession": "Möchten Sie diese Sitzung wirklich beenden?",
+    "confirmRevokeAllSessions": "Möchten Sie wirklich alle Sitzungen dieses Benutzers beenden?",
+    "failedToRevokeSessions": "Sitzungen konnten nicht widerrufen werden",
+    "sessionsRevokedSuccessfully": "Sitzungen erfolgreich beendet",
     "databaseSecurity": "Datenbanksicherheit",
     "encryptionStatus": "Verschlüsselungsstatus",
     "encryptionEnabled": "Verschlüsselung aktiviert",
@@ -620,7 +627,7 @@
     "autoStartContainer": "Automatischer Start beim Container-Start",
     "autoStartDesc": "Diesen Tunnel beim Start des Containers automatisch starten",
     "addConnection": "Tunnelverbindung hinzufügen",
-    "sshpassRequired": "Sshpass erforderlich für die Passwort-Authentifizierung",
+    "sshpassRequired": "sshpass erforderlich für die Passwort-Authentifizierung",
     "sshpassRequiredDesc": "Für die Passwortauthentifizierung in Tunneln muss sshpass auf dem System installiert sein.",
     "otherInstallMethods": "Andere Installationsmethoden:",
     "debianUbuntuEquivalent": "(Debian\/Ubuntu) oder das entsprechende Pendant für Ihr Betriebssystem.",
@@ -1072,7 +1079,7 @@
     "used": "Gebraucht",
     "percentage": "Prozentsatz",
     "refreshStatusAndMetrics": "Aktualisierungsstatus und Metriken",
-    "refreshStatus": "Aktualisierungsstatus",
+    "refreshStatus": "Aktualisieren",
     "fileManagerAlreadyOpen": "Der Dateimanager ist für diesen Host bereits geöffnet",
     "openFileManager": "Dateimanager öffnen",
     "cpuCores_one": "{{count}} CPU",
@@ -1081,9 +1088,10 @@
     "loadAverageNA": "Durchschnitt: N\/A",
     "cpuUsage": "CPU-Auslastung",
     "memoryUsage": "Speicherauslastung",
+    "diskUsage": "Festplattennutzung",
     "rootStorageSpace": "Root-Speicherplatz",
     "of": "von",
-    "feedbackMessage": "Haben Sie Ideen für die nächsten Schritte im Bereich der Serververwaltung? Teilen Sie diese mit uns",
+    "feedbackMessage": "Haben Sie Ideen, wie es bei der Serververwaltung weitergehen könnte? Dann teilen Sie diese gerne mit uns auf",
     "failedToFetchHostConfig": "Abrufen der Hostkonfiguration fehlgeschlagen",
     "failedToFetchStatus": "Abrufen des Serverstatus fehlgeschlagen",
     "failedToFetchMetrics": "Abrufen der Servermetriken fehlgeschlagen",
@@ -1092,7 +1100,26 @@
     "refreshing": "Aktualisieren...",
     "serverOffline": "Server offline",
     "cannotFetchMetrics": "Metriken können nicht vom Offline-Server abgerufen werden",
-    "load": "Laden"
+    "load": "Last"
+    "available": "Verfügbar",
+    "editLayout": "Layout anpassen",
+    "cancelEdit": "Abbrechen",
+    "addWidget": "Widget hinzufügen",
+    "saveLayout": "Layout speichern",
+    "unsavedChanges": "Ungespeicherte Änderungen",
+    "layoutSaved": "Layout erfolgreich gespeichert",
+    "failedToSaveLayout": "Speichern des Layout fehlgeschlagen",
+    "systemInfo": "System Information",
+    "hostname": "Hostname",
+    "operatingSystem": "Betriebssystem",
+    "kernel": "Kernel",
+    "totalUptime": "Gesamte Betriebszeit",
+    "seconds": "Sekunden",
+    "networkInterfaces": "Netzwerkschnittstellen",
+    "noInterfacesFound": "Keine Netzwerkschnittstellen gefunden",
+    "totalProcesses": "Gesamtprozesse",
+    "running": "läuft",
+    "noProcessesFound": "Keine Prozesse gefunden"
   },
   "auth": {
     "loginTitle": "Melden Sie sich bei Termix an",
@@ -1372,7 +1399,7 @@
     "disconnected": "Getrennt",
     "maxRetriesExhausted": "Maximale Wiederholungsversuche ausgeschöpft",
     "endpointHostNotFound": "Endpunkthost nicht gefunden",
-    "administrator": "Administrator",
+    "administrator": "Admin",
     "user": "Benutzer",
     "external": "Extern",
     "local": "Lokal",
