feat: Add i18n support for terminal customization and login stats
- Add comprehensive terminal customization translations (60+ keys) for appearance, behavior, and advanced settings across all 4 languages
- Add SSH login statistics translations
- Update HostManagerEditor to use i18n for all terminal customization UI elements
- Update LoginStatsWidget to use i18n for all UI text
- Add missing logger imports in backend files for improved debugging

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -706,6 +706,69 @@
     "statusMonitoring": "Status",
     "metricsMonitoring": "Metriken",
     "terminalCustomizationNotice": "Hinweis: Terminal-Anpassungen funktionieren nur in der Desktop-Website-Version. Mobile und Electron-Apps verwenden die Standard-Terminaleinstellungen des Systems.",
+    "terminalCustomization": "Terminal-Anpassung",
+    "appearance": "Aussehen",
+    "behavior": "Verhalten",
+    "advanced": "Erweitert",
+    "themePreview": "Themen-Vorschau",
+    "theme": "Thema",
+    "selectTheme": "Thema auswählen",
+    "chooseColorTheme": "Wählen Sie ein Farbthema für das Terminal",
+    "fontFamily": "Schriftfamilie",
+    "selectFont": "Schriftart auswählen",
+    "selectFontDesc": "Wählen Sie die im Terminal zu verwendende Schriftart",
+    "fontSize": "Schriftgröße",
+    "fontSizeValue": "Schriftgröße: {{value}}px",
+    "adjustFontSize": "Terminal-Schriftgröße anpassen",
+    "letterSpacing": "Zeichenabstand",
+    "letterSpacingValue": "Zeichenabstand: {{value}}px",
+    "adjustLetterSpacing": "Abstand zwischen Zeichen anpassen",
+    "lineHeight": "Zeilenhöhe",
+    "lineHeightValue": "Zeilenhöhe: {{value}}",
+    "adjustLineHeight": "Abstand zwischen Zeilen anpassen",
+    "cursorStyle": "Cursor-Stil",
+    "selectCursorStyle": "Cursor-Stil auswählen",
+    "cursorStyleBlock": "Block",
+    "cursorStyleUnderline": "Unterstrich",
+    "cursorStyleBar": "Balken",
+    "chooseCursorAppearance": "Cursor-Erscheinungsbild wählen",
+    "cursorBlink": "Cursor-Blinken",
+    "enableCursorBlink": "Cursor-Blinkanimation aktivieren",
+    "scrollbackBuffer": "Rückwärts-Puffer",
+    "scrollbackBufferValue": "Rückwärts-Puffer: {{value}} Zeilen",
+    "scrollbackBufferDesc": "Anzahl der Zeilen im Rückwärtsverlauf",
+    "bellStyle": "Signalton-Stil",
+    "selectBellStyle": "Signalton-Stil auswählen",
+    "bellStyleNone": "Keine",
+    "bellStyleSound": "Ton",
+    "bellStyleVisual": "Visuell",
+    "bellStyleBoth": "Beides",
+    "bellStyleDesc": "Behandlung des Terminal-Signaltons (BEL-Zeichen, \\x07). Programme lösen dies aus, wenn Aufgaben abgeschlossen werden, Fehler auftreten oder für Benachrichtigungen. \"Ton\" spielt einen akustischen Signalton ab, \"Visuell\" lässt den Bildschirm kurz aufblinken, \"Beides\" macht beides, \"Keine\" deaktiviert Signalton-Benachrichtigungen.",
+    "rightClickSelectsWord": "Rechtsklick wählt Wort",
+    "rightClickSelectsWordDesc": "Rechtsklick wählt das Wort unter dem Cursor aus",
+    "fastScrollModifier": "Schnellscroll-Modifikator",
+    "selectModifier": "Modifikator auswählen",
+    "modifierAlt": "Alt",
+    "modifierCtrl": "Strg",
+    "modifierShift": "Umschalt",
+    "fastScrollModifierDesc": "Modifikatortaste für schnelles Scrollen",
+    "fastScrollSensitivity": "Schnellscroll-Empfindlichkeit",
+    "fastScrollSensitivityValue": "Schnellscroll-Empfindlichkeit: {{value}}",
+    "fastScrollSensitivityDesc": "Scroll-Geschwindigkeitsmultiplikator bei gedrücktem Modifikator",
+    "minimumContrastRatio": "Minimales Kontrastverhältnis",
+    "minimumContrastRatioValue": "Minimales Kontrastverhältnis: {{value}}",
+    "minimumContrastRatioDesc": "Farben automatisch für bessere Lesbarkeit anpassen",
+    "sshAgentForwarding": "SSH-Agent-Weiterleitung",
+    "sshAgentForwardingDesc": "SSH-Authentifizierungsagent an Remote-Host weiterleiten",
+    "backspaceMode": "Rücktaste-Modus",
+    "selectBackspaceMode": "Rücktaste-Modus auswählen",
+    "backspaceModeNormal": "Normal (DEL)",
+    "backspaceModeControlH": "Control-H (^H)",
+    "backspaceModeDesc": "Rücktasten-Verhalten für Kompatibilität",
+    "startupSnippet": "Start-Snippet",
+    "selectSnippet": "Snippet auswählen",
+    "searchSnippets": "Snippets durchsuchen...",
+    "snippetNone": "Keine",
     "noneAuthTitle": "Keyboard-Interactive-Authentifizierung",
     "noneAuthDescription": "Diese Authentifizierungsmethode verwendet beim Herstellen der Verbindung zum SSH-Server die Keyboard-Interactive-Authentifizierung.",
     "noneAuthDetails": "Keyboard-Interactive-Authentifizierung ermöglicht dem Server, Sie während der Verbindung zur Eingabe von Anmeldeinformationen aufzufordern. Dies ist nützlich für Server, die eine Multi-Faktor-Authentifizierung oder eine dynamische Passworteingabe erfordern.",
@@ -1119,7 +1182,14 @@
     "noInterfacesFound": "Keine Netzwerkschnittstellen gefunden",
     "totalProcesses": "Gesamtprozesse",
     "running": "läuft",
-    "noProcessesFound": "Keine Prozesse gefunden"
+    "noProcessesFound": "Keine Prozesse gefunden",
+    "loginStats": "SSH-Anmeldestatistiken",
+    "totalLogins": "Gesamtanmeldungen",
+    "uniqueIPs": "Eindeutige IPs",
+    "recentSuccessfulLogins": "Letzte erfolgreiche Anmeldungen",
+    "recentFailedAttempts": "Letzte fehlgeschlagene Versuche",
+    "noRecentLoginData": "Keine aktuellen Anmeldedaten",
+    "from": "von"
   },
   "auth": {
     "loginTitle": "Melden Sie sich bei Termix an",
