feat: Update login page theme colors and add i18n support
- Changed login page gradient from blue to match dark theme colors
- Updated ripple effects to use theme primary color
- Added i18n translation keys for login page (auth.tagline, auth.description, auth.welcomeBack, auth.createAccount, auth.continueExternal)
- Updated all language files (en, zh, de, ru, pt-BR) with new translations
- Fixed TypeScript compilation issues by clearing build cache

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1192,6 +1192,11 @@
     "from": "von"
   },
   "auth": {
+    "tagline": "SSH TERMINAL MANAGER",
+    "description": "Sichere, leistungsstarke und intuitive SSH-Verbindungsverwaltung",
+    "welcomeBack": "Willkommen zurück bei TERMIX",
+    "createAccount": "Erstellen Sie Ihr TERMIX-Konto",
+    "continueExternal": "Mit externem Anbieter fortfahren",
     "loginTitle": "Melden Sie sich bei Termix an",
     "registerTitle": "Benutzerkonto erstellen",
     "loginButton": "Anmelden",
