feat: Enhanced security, UI improvements, and animations (#432)
* fix: Remove empty catch blocks and add error logging

* refactor: Modularize server stats widget collectors

* feat: Add i18n support for terminal customization and login stats

- Add comprehensive terminal customization translations (60+ keys) for appearance, behavior, and advanced settings across all 4 languages
- Add SSH login statistics translations
- Update HostManagerEditor to use i18n for all terminal customization UI elements
- Update LoginStatsWidget to use i18n for all UI text
- Add missing logger imports in backend files for improved debugging

* feat: Add keyboard shortcut enhancements with Kbd component

- Add shadcn kbd component for displaying keyboard shortcuts
- Enhance file manager context menu to display shortcuts with Kbd component
- Add 5 new keyboard shortcuts to file manager:
  - Ctrl+D: Download selected files
  - Ctrl+N: Create new file
  - Ctrl+Shift+N: Create new folder
  - Ctrl+U: Upload files
  - Enter: Open/run selected file
- Add keyboard shortcut hints to command palette footer
- Create helper function to parse and render keyboard shortcuts

* feat: Add i18n support for command palette

- Add commandPalette translation section with 22 keys to all 4 languages
- Update CommandPalette component to use i18n for all UI text
- Translate search placeholder, group headings, menu items, and shortcut hints
- Support multilingual command palette interface

* feat: Add smooth transitions and animations to UI

- Add fade-in/fade-out transition to command palette (200ms)
- Add scale animation to command palette on open/close
- Add smooth popup animation to context menu (150ms)
- Add visual feedback for file selection with ring effect
- Add hover scale effect to file grid items
- Add transition-all to list view items for consistent behavior
- Zero JavaScript overhead, pure CSS transitions
- All animations under 200ms for instant feel

* feat: Add button active state and dashboard card

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -779,6 +779,69 @@
     "statusMonitoring": "Status",
     "metricsMonitoring": "Metrics",
     "terminalCustomizationNotice": "Note: Terminal customizations only work on desktop (website and Electron app). Mobile apps and mobile website use system default terminal settings.",
+    "terminalCustomization": "Terminal Customization",
+    "appearance": "Appearance",
+    "behavior": "Behavior",
+    "advanced": "Advanced",
+    "themePreview": "Theme Preview",
+    "theme": "Theme",
+    "selectTheme": "Select theme",
+    "chooseColorTheme": "Choose a color theme for the terminal",
+    "fontFamily": "Font Family",
+    "selectFont": "Select font",
+    "selectFontDesc": "Select the font to use in the terminal",
+    "fontSize": "Font Size",
+    "fontSizeValue": "Font Size: {{value}}px",
+    "adjustFontSize": "Adjust the terminal font size",
+    "letterSpacing": "Letter Spacing",
+    "letterSpacingValue": "Letter Spacing: {{value}}px",
+    "adjustLetterSpacing": "Adjust spacing between characters",
+    "lineHeight": "Line Height",
+    "lineHeightValue": "Line Height: {{value}}",
+    "adjustLineHeight": "Adjust spacing between lines",
+    "cursorStyle": "Cursor Style",
+    "selectCursorStyle": "Select cursor style",
+    "cursorStyleBlock": "Block",
+    "cursorStyleUnderline": "Underline",
+    "cursorStyleBar": "Bar",
+    "chooseCursorAppearance": "Choose the cursor appearance",
+    "cursorBlink": "Cursor Blink",
+    "enableCursorBlink": "Enable cursor blinking animation",
+    "scrollbackBuffer": "Scrollback Buffer",
+    "scrollbackBufferValue": "Scrollback Buffer: {{value}} lines",
+    "scrollbackBufferDesc": "Number of lines to keep in scrollback history",
+    "bellStyle": "Bell Style",
+    "selectBellStyle": "Select bell style",
+    "bellStyleNone": "None",
+    "bellStyleSound": "Sound",
+    "bellStyleVisual": "Visual",
+    "bellStyleBoth": "Both",
+    "bellStyleDesc": "How to handle terminal bell (BEL character, \\x07). Programs trigger this when completing tasks, encountering errors, or for notifications. \"Sound\" plays an audio beep, \"Visual\" flashes the screen briefly, \"Both\" does both, \"None\" disables bell alerts.",
+    "rightClickSelectsWord": "Right Click Selects Word",
+    "rightClickSelectsWordDesc": "Right-clicking selects the word under cursor",
+    "fastScrollModifier": "Fast Scroll Modifier",
+    "selectModifier": "Select modifier",
+    "modifierAlt": "Alt",
+    "modifierCtrl": "Ctrl",
+    "modifierShift": "Shift",
+    "fastScrollModifierDesc": "Modifier key for fast scrolling",
+    "fastScrollSensitivity": "Fast Scroll Sensitivity",
+    "fastScrollSensitivityValue": "Fast Scroll Sensitivity: {{value}}",
+    "fastScrollSensitivityDesc": "Scroll speed multiplier when modifier is held",
+    "minimumContrastRatio": "Minimum Contrast Ratio",
+    "minimumContrastRatioValue": "Minimum Contrast Ratio: {{value}}",
+    "minimumContrastRatioDesc": "Automatically adjust colors for better readability",
+    "sshAgentForwarding": "SSH Agent Forwarding",
+    "sshAgentForwardingDesc": "Forward SSH authentication agent to remote host",
+    "backspaceMode": "Backspace Mode",
+    "selectBackspaceMode": "Select backspace mode",
+    "backspaceModeNormal": "Normal (DEL)",
+    "backspaceModeControlH": "Control-H (^H)",
+    "backspaceModeDesc": "Backspace key behavior for compatibility",
+    "startupSnippet": "Startup Snippet",
+    "selectSnippet": "Select snippet",
+    "searchSnippets": "Search snippets...",
+    "snippetNone": "None",
     "noneAuthTitle": "Keyboard-Interactive Authentication",
     "noneAuthDescription": "This authentication method will use keyboard-interactive authentication when connecting to the SSH server.",
     "noneAuthDetails": "Keyboard-interactive authentication allows the server to prompt you for credentials during connection. This is useful for servers that require multi-factor authentication or if you do not want to save credentials locally.",
@@ -1231,9 +1294,21 @@
     "noInterfacesFound": "No network interfaces found",
     "totalProcesses": "Total Processes",
     "running": "Running",
-    "noProcessesFound": "No processes found"
+    "noProcessesFound": "No processes found",
+    "loginStats": "SSH Login Statistics",
+    "totalLogins": "Total Logins",
+    "uniqueIPs": "Unique IPs",
+    "recentSuccessfulLogins": "Recent Successful Logins",
+    "recentFailedAttempts": "Recent Failed Attempts",
+    "noRecentLoginData": "No recent login data",
+    "from": "from"
   },
   "auth": {
+    "tagline": "SSH TERMINAL MANAGER",
+    "description": "Secure, powerful, and intuitive SSH connection management",
+    "welcomeBack": "Welcome back to TERMIX",
+    "createAccount": "Create your TERMIX account",
+    "continueExternal": "Continue with external provider",
     "loginTitle": "Login to Termix",
     "registerTitle": "Create Account",
     "loginButton": "Login",
@@ -1622,5 +1697,28 @@
     "cpu": "CPU",
     "ram": "RAM",
     "notAvailable": "N/A"
+  },
+  "commandPalette": {
+    "searchPlaceholder": "Search for hosts or quick actions...",
+    "recentActivity": "Recent Activity",
+    "navigation": "Navigation",
+    "addHost": "Add Host",
+    "addCredential": "Add Credential",
+    "adminSettings": "Admin Settings",
+    "userProfile": "User Profile",
+    "updateLog": "Update Log",
+    "hosts": "Hosts",
+    "openServerDetails": "Open Server Details",
+    "openFileManager": "Open File Manager",
+    "edit": "Edit",
+    "links": "Links",
+    "github": "GitHub",
+    "support": "Support",
+    "discord": "Discord",
+    "donate": "Donate",
+    "press": "Press",
+    "toToggle": "to toggle",
+    "close": "Close",
+    "hostManager": "Host Manager"
   }
 }
