--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -766,6 +766,69 @@
     "statusMonitoring": "Статус",
     "metricsMonitoring": "Метрики",
     "terminalCustomizationNotice": "Примечание: Настройки терминала работают только на рабочем столе (веб-сайт и Electron-приложение). Мобильные приложения и мобильный веб-сайт используют системные настройки терминала по умолчанию.",
+    "terminalCustomization": "Настройка терминала",
+    "appearance": "Внешний вид",
+    "behavior": "Поведение",
+    "advanced": "Расширенные",
+    "themePreview": "Предпросмотр темы",
+    "theme": "Тема",
+    "selectTheme": "Выбрать тему",
+    "chooseColorTheme": "Выберите цветовую тему для терминала",
+    "fontFamily": "Семейство шрифтов",
+    "selectFont": "Выбрать шрифт",
+    "selectFontDesc": "Выберите шрифт для использования в терминале",
+    "fontSize": "Размер шрифта",
+    "fontSizeValue": "Размер шрифта: {{value}}px",
+    "adjustFontSize": "Настроить размер шрифта терминала",
+    "letterSpacing": "Межбуквенный интервал",
+    "letterSpacingValue": "Межбуквенный интервал: {{value}}px",
+    "adjustLetterSpacing": "Настроить расстояние между символами",
+    "lineHeight": "Высота строки",
+    "lineHeightValue": "Высота строки: {{value}}",
+    "adjustLineHeight": "Настроить расстояние между строками",
+    "cursorStyle": "Стиль курсора",
+    "selectCursorStyle": "Выбрать стиль курсора",
+    "cursorStyleBlock": "Блок",
+    "cursorStyleUnderline": "Подчеркивание",
+    "cursorStyleBar": "Полоса",
+    "chooseCursorAppearance": "Выбрать внешний вид курсора",
+    "cursorBlink": "Мигание курсора",
+    "enableCursorBlink": "Включить анимацию мигания курсора",
+    "scrollbackBuffer": "Буфер прокрутки",
+    "scrollbackBufferValue": "Буфер прокрутки: {{value}} строк",
+    "scrollbackBufferDesc": "Количество строк для хранения в истории прокрутки",
+    "bellStyle": "Стиль звонка",
+    "selectBellStyle": "Выбрать стиль звонка",
+    "bellStyleNone": "Нет",
+    "bellStyleSound": "Звук",
+    "bellStyleVisual": "Визуальный",
+    "bellStyleBoth": "Оба",
+    "bellStyleDesc": "Как обрабатывать звонок терминала (символ BEL, \\x07). Программы вызывают его при завершении задач, возникновении ошибок или для уведомлений. \"Звук\" воспроизводит звуковой сигнал, \"Визуальный\" кратковременно мигает экран, \"Оба\" делает и то, и другое, \"Нет\" отключает звуковые оповещения.",
+    "rightClickSelectsWord": "Правый клик выбирает слово",
+    "rightClickSelectsWordDesc": "Правый клик выбирает слово под курсором",
+    "fastScrollModifier": "Модификатор быстрой прокрутки",
+    "selectModifier": "Выбрать модификатор",
+    "modifierAlt": "Alt",
+    "modifierCtrl": "Ctrl",
+    "modifierShift": "Shift",
+    "fastScrollModifierDesc": "Клавиша-модификатор для быстрой прокрутки",
+    "fastScrollSensitivity": "Чувствительность быстрой прокрутки",
+    "fastScrollSensitivityValue": "Чувствительность быстрой прокрутки: {{value}}",
+    "fastScrollSensitivityDesc": "Множитель скорости прокрутки при удержании модификатора",
+    "minimumContrastRatio": "Минимальная контрастность",
+    "minimumContrastRatioValue": "Минимальная контрастность: {{value}}",
+    "minimumContrastRatioDesc": "Автоматически настраивать цвета для лучшей читаемости",
+    "sshAgentForwarding": "Переадресация SSH-агента",
+    "sshAgentForwardingDesc": "Переадресовать агент SSH-аутентификации на удаленный хост",
+    "backspaceMode": "Режим Backspace",
+    "selectBackspaceMode": "Выбрать режим Backspace",
+    "backspaceModeNormal": "Обычный (DEL)",
+    "backspaceModeControlH": "Control-H (^H)",
+    "backspaceModeDesc": "Поведение клавиши Backspace для совместимости",
+    "startupSnippet": "Сниппет запуска",
+    "selectSnippet": "Выбрать сниппет",
+    "searchSnippets": "Поиск сниппетов...",
+    "snippetNone": "Нет",
     "noneAuthTitle": "Интерактивная аутентификация по клавиатуре",
     "noneAuthDescription": "Этот метод аутентификации будет использовать интерактивную аутентификацию по клавиатуре при подключении к SSH-серверу.",
     "noneAuthDetails": "Интерактивная аутентификация по клавиатуре позволяет серверу запрашивать у вас учетные данные во время подключения. Это полезно для серверов, которые требуют многофакторную аутентификацию или динамический ввод пароля."
@@ -1215,9 +1278,21 @@
     "noInterfacesFound": "Сетевые интерфейсы не найдены",
     "totalProcesses": "Всего процессов",
     "running": "Запущено",
-    "noProcessesFound": "Процессы не найдены"
+    "noProcessesFound": "Процессы не найдены",
+    "loginStats": "Статистика входов SSH",
+    "totalLogins": "Всего входов",
+    "uniqueIPs": "Уникальные IP",
+    "recentSuccessfulLogins": "Последние успешные входы",
+    "recentFailedAttempts": "Последние неудачные попытки",
+    "noRecentLoginData": "Нет данных о недавних входах",
+    "from": "с"
   },
   "auth": {
+    "tagline": "SSH ТЕРМИНАЛ МЕНЕДЖЕР",
+    "description": "Безопасное, мощное и интуитивное управление SSH-соединениями",
+    "welcomeBack": "Добро пожаловать обратно в TERMIX",
+    "createAccount": "Создайте вашу учетную запись TERMIX",
+    "continueExternal": "Продолжить с внешним провайдером",
     "loginTitle": "Вход в Termix",
     "registerTitle": "Создать учетную запись",
     "loginButton": "Войти",
@@ -1587,5 +1662,28 @@
     "cpu": "CPU",
     "ram": "RAM",
     "notAvailable": "N/A"
+  },
+  "commandPalette": {
+    "searchPlaceholder": "Поиск хостов или быстрых действий...",
+    "recentActivity": "Недавняя активность",
+    "navigation": "Навигация",
+    "addHost": "Добавить хост",
+    "addCredential": "Добавить учетные данные",
+    "adminSettings": "Настройки администратора",
+    "userProfile": "Профиль пользователя",
+    "updateLog": "Журнал обновлений",
+    "hosts": "Хосты",
+    "openServerDetails": "Открыть детали сервера",
+    "openFileManager": "Открыть файловый менеджер",
+    "edit": "Редактировать",
+    "links": "Ссылки",
+    "github": "GitHub",
+    "support": "Поддержка",
+    "discord": "Discord",
+    "donate": "Пожертвовать",
+    "press": "Нажмите",
+    "toToggle": "для переключения",
+    "close": "Закрыть",
+    "hostManager": "Менеджер хостов"
   }
 }
