--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -790,6 +790,69 @@
     "statusMonitoring": "状态",
     "metricsMonitoring": "指标",
     "terminalCustomizationNotice": "注意：终端自定义仅在桌面网站版本中有效。移动和 Electron 应用程序使用系统默认终端设置。",
+    "terminalCustomization": "终端自定义",
+    "appearance": "外观",
+    "behavior": "行为",
+    "advanced": "高级",
+    "themePreview": "主题预览",
+    "theme": "主题",
+    "selectTheme": "选择主题",
+    "chooseColorTheme": "选择终端的颜色主题",
+    "fontFamily": "字体系列",
+    "selectFont": "选择字体",
+    "selectFontDesc": "选择终端使用的字体",
+    "fontSize": "字体大小",
+    "fontSizeValue": "字体大小：{{value}}px",
+    "adjustFontSize": "调整终端字体大小",
+    "letterSpacing": "字母间距",
+    "letterSpacingValue": "字母间距：{{value}}px",
+    "adjustLetterSpacing": "调整字符之间的间距",
+    "lineHeight": "行高",
+    "lineHeightValue": "行高：{{value}}",
+    "adjustLineHeight": "调整行之间的间距",
+    "cursorStyle": "光标样式",
+    "selectCursorStyle": "选择光标样式",
+    "cursorStyleBlock": "块状",
+    "cursorStyleUnderline": "下划线",
+    "cursorStyleBar": "竖线",
+    "chooseCursorAppearance": "选择光标外观",
+    "cursorBlink": "光标闪烁",
+    "enableCursorBlink": "启用光标闪烁动画",
+    "scrollbackBuffer": "回滚缓冲区",
+    "scrollbackBufferValue": "回滚缓冲区：{{value}} 行",
+    "scrollbackBufferDesc": "保留在回滚历史记录中的行数",
+    "bellStyle": "铃声样式",
+    "selectBellStyle": "选择铃声样式",
+    "bellStyleNone": "无",
+    "bellStyleSound": "声音",
+    "bellStyleVisual": "视觉",
+    "bellStyleBoth": "两者",
+    "bellStyleDesc": "如何处理终端铃声（BEL字符，\\x07）。程序在完成任务、遇到错误或通知时会触发此功能。\"声音\"播放音频提示音，\"视觉\"短暂闪烁屏幕，\"两者\"同时执行，\"无\"禁用铃声提醒。",
+    "rightClickSelectsWord": "右键选择单词",
+    "rightClickSelectsWordDesc": "右键单击选择光标下的单词",
+    "fastScrollModifier": "快速滚动修饰键",
+    "selectModifier": "选择修饰键",
+    "modifierAlt": "Alt",
+    "modifierCtrl": "Ctrl",
+    "modifierShift": "Shift",
+    "fastScrollModifierDesc": "快速滚动的修饰键",
+    "fastScrollSensitivity": "快速滚动灵敏度",
+    "fastScrollSensitivityValue": "快速滚动灵敏度：{{value}}",
+    "fastScrollSensitivityDesc": "按住修饰键时的滚动速度倍数",
+    "minimumContrastRatio": "最小对比度",
+    "minimumContrastRatioValue": "最小对比度：{{value}}",
+    "minimumContrastRatioDesc": "自动调整颜色以获得更好的可读性",
+    "sshAgentForwarding": "SSH 代理转发",
+    "sshAgentForwardingDesc": "将 SSH 身份验证代理转发到远程主机",
+    "backspaceMode": "退格模式",
+    "selectBackspaceMode": "选择退格模式",
+    "backspaceModeNormal": "正常 (DEL)",
+    "backspaceModeControlH": "Control-H (^H)",
+    "backspaceModeDesc": "退格键行为兼容性",
+    "startupSnippet": "启动代码片段",
+    "selectSnippet": "选择代码片段",
+    "searchSnippets": "搜索代码片段...",
+    "snippetNone": "无",
     "noneAuthTitle": "键盘交互式认证",
     "noneAuthDescription": "此认证方法在连接到 SSH 服务器时将使用键盘交互式认证。",
     "noneAuthDetails": "键盘交互式认证允许服务器在连接期间提示您输入凭据。这对于需要多因素认证或动态密码输入的服务器很有用。",
@@ -1199,9 +1262,21 @@
     "noInterfacesFound": "未找到网络接口",
     "totalProcesses": "总进程数",
     "running": "运行中",
-    "noProcessesFound": "未找到进程"
+    "noProcessesFound": "未找到进程",
+    "loginStats": "SSH 登录统计",
+    "totalLogins": "总登录次数",
+    "uniqueIPs": "唯一 IP 数",
+    "recentSuccessfulLogins": "最近成功登录",
+    "recentFailedAttempts": "最近失败尝试",
+    "noRecentLoginData": "无最近登录数据",
+    "from": "来自"
   },
   "auth": {
+    "tagline": "SSH 终端管理器",
+    "description": "安全、强大、直观的 SSH 连接管理",
+    "welcomeBack": "欢迎回到 TERMIX",
+    "createAccount": "创建您的 TERMIX 账户",
+    "continueExternal": "使用外部提供商继续",
     "loginTitle": "登录 Termix",
     "registerTitle": "创建账户",
     "loginButton": "登录",
@@ -1512,5 +1587,28 @@
     "cpu": "CPU",
     "ram": "内存",
     "notAvailable": "不可用"
+  },
+  "commandPalette": {
+    "searchPlaceholder": "搜索主机或快速操作...",
+    "recentActivity": "最近活动",
+    "navigation": "导航",
+    "addHost": "添加主机",
+    "addCredential": "添加凭据",
+    "adminSettings": "管理员设置",
+    "userProfile": "用户资料",
+    "updateLog": "更新日志",
+    "hosts": "主机",
+    "openServerDetails": "打开服务器详情",
+    "openFileManager": "打开文件管理器",
+    "edit": "编辑",
+    "links": "链接",
+    "github": "GitHub",
+    "support": "支持",
+    "discord": "Discord",
+    "donate": "捐赠",
+    "press": "按下",
+    "toToggle": "来切换",
+    "close": "关闭",
+    "hostManager": "主机管理器"
   }
 }
